k8s/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clm-service
spec:
  type: LoadBalancer
  selector:
    app: clm
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
