k8s/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clm-ingress
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - clm.digital.safaricomet.net
      secretName: self-care-portal-tls-secret
  rules:
    - host: clm.digital.safaricomet.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clm-service
                port:
                  number: 3000
